Closed Bug 1869604 Opened 2 years ago Closed 2 years ago

Incorrect asserts for OnDataFinished telemetry timing

Categories

(Core :: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

Attachments

(1 file)

There are situations where we can destroy something before OnStopRequest runs, which can lead to the asserts in OnDataFinished firing in debug builds

Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7dce4da14404 Remove incorrect asserts in OnDataFinished r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Duplicate of this bug: 1864477
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: