Bug 1869604: Remove incorrect asserts in OnDataFinished r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D196221